--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,24 @@
-# Auto detect text files and perform LF normalization
+# Handle line endings consistently across OS
 * text=auto
+
+# Ensure Java, Markdown, HTML, CSS, JS use LF
+*.java text eol=lf
+*.md text eol=lf
+*.html text eol=lf
+*.css text eol=lf
+*.js text eol=lf
+
+# Treat images as binary to avoid diff/merge issues
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+
+# Syntax highlighting on GitHub (optional)
+*.java linguist-language=Java
+*.md linguist-language=Markdown
+*.html linguist-language=HTML
+
+# If you use Git LFS for large files (optional, add only if using LFS)
+# *.mp4 filter=lfs diff=lfs merge=lfs -text
